// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family D — overrides > D1 — override-valid: pi resolves via override 1`] = `
"name:   pi
ok:     true
source: override
path:   /opt/custom/bin/pi
tried:
  override     ok"
`;

exports[`Family D — overrides > D2 — override-invalid: path doesn't exist, chain falls through 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     invalid: path does not exist: /nonexistent/broken/pi
  managed      ok"
`;
